# roxy

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  devenv.nix
.beads/: metadata.json
.beads/hooks/: pre-commit
crates/roxy-cache/: Cargo.toml
crates/roxy-cache-fs/: Cargo.toml
crates/roxy-cache-fs/src/: blob.rs  index.rs  lib.rs  writer.rs
crates/roxy-cache/src/: error.rs  key.rs  lib.rs  response.rs  vary.rs
crates/roxy-capture/: Cargo.toml
crates/roxy-capture/src/: client_hello.rs  h2.rs  lib.rs  profile.rs  server.rs  stream.rs
crates/roxy-capture/tests/: capture_e2e.rs
crates/roxy-config/: Cargo.toml
crates/roxy-config/src/: error.rs  lib.rs  proxy.rs
crates/roxy-http/: Cargo.toml
crates/roxy-http/src/: accept.rs  connect.rs  lib.rs  proxy_connector.rs  router.rs  server.rs  upstream.rs
crates/roxy-http/tests/: connect_parse.rs  upstream_h1.rs
crates/roxy-impersonate/: Cargo.toml
crates/roxy-impersonate/src/: body.rs  client.rs  custom.rs  error.rs  lib.rs  profile.rs
crates/roxy-mitm/: Cargo.toml
crates/roxy-mitm/src/: ca.rs  leaf.rs  lib.rs  resolver.rs  terminator.rs
crates/roxy-mitm/src/trust/: linux.rs  macos.rs  mod.rs
crates/roxy-proxy/: Cargo.toml
crates/roxy-proxy/src/: ca_cmd.rs  cache_directives.rs  cli.rs  finalize_signal.rs  handler.rs  lib.rs  main.rs  serve.rs
crates/roxy-proxy/tests/: cache_control.rs  cache_disabled.rs  cache_vary.rs  errors.rs  fingerprint_fidelity.rs  fingerprint_smoke.rs  golden.rs  http_plain.rs  impersonate.rs  smoke.rs  streaming.rs  ttl.rs  upstream_proxy.rs
crates/roxy-proxy/tests/common/: fake_proxy.rs  mod.rs  trust.rs
docs/superpowers/plans/: 2026-05-12-roxy-mvp-implementation.md  2026-05-13-cachekey-host-hardening.md  2026-05-13-pem-trust-store-test-utils-feature.md  2026-05-13-plain-http-proxy.md  2026-05-13-tls-fingerprint-emulation.md  2026-05-14-high-fidelity-custom-profiles.md  2026-05-14-upstream-proxy-support.md  2026-05-17-cache-vary.md
docs/superpowers/specs/: 2026-05-12-roxy-mvp-architecture-design.md  2026-05-13-cachekey-host-hardening-design.md  2026-05-13-pem-trust-store-test-utils-feature-design.md  2026-05-13-plain-http-proxy-design.md  2026-05-13-tls-fingerprint-emulation-design.md  2026-05-14-high-fidelity-custom-profiles-design.md  2026-05-14-upstream-proxy-support-design.md  2026-05-17-cache-vary-design.md
profiles/: chrome-148.toml
