[workspace]
resolver = "2"
members = [
    "crates/roxy-proxy",
    "crates/roxy-http",
    "crates/roxy-mitm",
    "crates/roxy-cache",
    "crates/roxy-cache-fs",
    "crates/roxy-config",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "fs", "io-util", "macros", "signal", "time", "sync"] }
futures = "0.3"
async-trait = "0.1"

# http
hyper = { version = "1.5", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1.10", features = ["tokio", "server-auto", "client-legacy", "http1", "http2"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "ring", "rustls-native-certs"] }
http = "1.1"
http-body = "1"
http-body-util = "0.1"
bytes = "1.7"

# tls / crypto
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = "1.8"
rustls-pemfile = "2.2"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
sha2 = "0.10"
hex = "0.4"

# storage
rusqlite = { version = "0.32", features = ["bundled"] }

# misc
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.10", features = ["v4"] }
lru = "0.12"
url = "2.5"
shellexpand = "3.1"
dirs = "5"

# internal
roxy-cache = { path = "crates/roxy-cache" }
roxy-cache-fs = { path = "crates/roxy-cache-fs" }
roxy-config = { path = "crates/roxy-config" }
roxy-http = { path = "crates/roxy-http" }
roxy-mitm = { path = "crates/roxy-mitm" }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = "thin"
codegen-units = 1
