[package]
name = "roxy-capture"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
roxy-mitm = { workspace = true }
roxy-impersonate = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tracing = { workspace = true }
anyhow = { workspace = true }
pin-project-lite = { workspace = true }
tls-parser = { workspace = true }
httlib-hpack = { workspace = true }

[dev-dependencies]
tempfile = "3.13"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
wreq = { workspace = true }
wreq-util = { workspace = true }
