[package]
name = "roxy-mitm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
rustls-pemfile = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
lru = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tracing = { workspace = true }
time = "0.3"
dirs = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38", features = ["process"] }

[dev-dependencies]
tempfile = "3.13"
